add abstract, keywords, preface, epilogue

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ reordering2.png
 reordering_correct.pdf
 reordering_correct.png
 title_orig.tex
+petov_edit.pdf
 
 ## Intermediate documents:
 *.dvi
